--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
   <title>Document</title>
    <link rel="stylesheet" href="style.css" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 
@@ -32,4 +33,5 @@
 
 </div>
 <div id='clicks'>0</div>
+
 <script src="script.js"></script>
