--- a/index.html
+++ b/index.html
@@ -1,37 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Document</title>
-   <link rel="stylesheet" href="style.css" />
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Farhan |Puzzle Game</title>
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
+<body>
 
+  <div id="puz_box">
 
+    <div id="puz">
+      <i class="first"></i>
+      <i class="secon"></i>
+      <i class="third"></i>
+      <i class="fourt"></i>
+      <i class="fifth"></i>
+      <i class="sixth"></i>
+      <i class="seven"></i>
+      <i class="eight"></i>
+      <i class="ninth"></i>
+    </div>
 
-<div id='puz_box'>
-  <div id='puz'>
-    <i class='first'></i>
-    <i class='secon'></i>
-    <i class='third'></i>
-    <i class='fourt'></i>
-    <i class='fifth'></i>
-    <i class='sixth'></i>
-    <i class='seven'></i>
-    <i class='eight'></i>
-    <i class='ninth'></i>
+    <div id="puzz">
+      <i class="third"></i>
+      <i class="first"></i>
+      <i class="secon"></i>
+      <i class="fourt"></i>
+      <i class="fifth"></i>
+      <i class="sixth"></i>
+      <i class="seven"></i>
+      <i class="eight"></i>
+      <i class="ninth"></i>
+    </div>
+
   </div>
-  <div id='puzz'>
-  <i class='third' draggable="true"></i>
-  <i class='first' draggable="true"></i>
-  <i class='secon' draggable="true"></i>
-  <i class='fourt' draggable="true"></i>
-  <i class='fifth' draggable="true"></i>
-  <i class='sixth' draggable="true"></i>
-  <i class='seven' draggable="true"></i>
-  <i class='eight' draggable="true"></i>
-  <i class='ninth' draggable="true"></i>
-</div>
 
-</div>
-<div id='clicks'>0</div>
+  <div id="clicks">0</div>
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
+
+</body>
+</html>
